--- a/1_exporters/postgresql-exporter/templates/secretstoreprovider.yaml
+++ b/1_exporters/postgresql-exporter/templates/secretstoreprovider.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   provider: azure
   secretObjects:
-  - secretName: postgresql-secrets-store
+  - secretName: {{ .Release.Name }}-secrets-store
     type: Opaque
     data:
       - objectName: {{.Values.keyvaultAccess.objectKey}}
