--- a/1_exporters/postgresql-exporter/templates/deployment.yaml
+++ b/1_exporters/postgresql-exporter/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         - name: DATA_SOURCE_PASS
           valueFrom:
             secretKeyRef:
-              name: postgresql-secrets-store
+              name: {{ .Release.Name }}-secrets-store
               key: postgresql-exporter-user-pass
         - name: PG_EXPORTER_AUTO_DISCOVER_DATABASES
           value: "true"
