Updated structure and readmes
Divided it into working in parallel and working solo modus.

--- a/3_prometheus_alerts/working_solo/prometheus-custom-alerts.yaml
+++ b/3_prometheus_alerts/working_solo/prometheus-custom-alerts.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 data:
   customAlertRules.yaml: |-
     groups:
-    - name: CustomAlerts
+    - name: MyCustomAlerts
       rules:
         - alert: HostRunningOutOfMemory
           expr: node_memory_MemAvailable_bytes * 1000000 < 200
