--- a/1_exporters/postgresql-exporter/templates/service.yaml
+++ b/1_exporters/postgresql-exporter/templates/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name:  {{ .Release.Name }}-service
+  annotations:
+    prometheus.io/scrape: "true"
   labels:
     exporters: postgresql
 spec:
